@@ -129,13 +129,6 @@ extern int solib_open (char *in_pathname, char **found_pathname);
 /* FIXME: gdbarch needs to control this variable */
 extern struct target_so_ops *current_target_so_ops;
 
-#define TARGET_SO_RELOCATE_SECTION_ADDRESSES \
-  (current_target_so_ops->relocate_section_addresses)
-#define TARGET_SO_FIND_AND_OPEN_SOLIB \
-  (current_target_so_ops->find_and_open_solib)
-#define TARGET_SO_IN_DYNSYM_RESOLVE_CODE \
-  (current_target_so_ops->in_dynsym_resolve_code)
-
 /* Handler for library-specific global symbol lookup in solib.c.  */
 struct symbol *solib_global_lookup (const struct objfile *objfile,
 				    const char *name,
